<resources>
    <string name="app_name">TechVault</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Registration_Text">Already have an account?</string>
    <string name="conform_password">Conform Password*</string>
    <string name="select_course">Select Course*</string>
    <string name="NameOfDepartment">Select Department*</string>
    <string name="signEmail">Email*</string>
    <string name="LoginEmail">EnrolmentNumber</string>
    <string name="Registration_Redirect_text">Sign In</string>
    <string name="Login_Redirect_text">Sign Up</string>
    <string name="creating_accounts_is_fast_and_easy">Creating accounts is fast and easy!</string>
    <string name="Sign_In_TO_Your_Account">Sign In to your account!</string>
    <string name="full_name">Full Name*</string>
    <string name="enrolment_number">Enrolment Number*</string>
    <string name="password">Password*</string>
    <string name="Sign_In_submit">Submit</string>
    <string name="Login_In_submit">Submit</string>
    <string name="Login_Text">Do not have an account?</string>
    <string name="forgot_security_pin">Forgot Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>