<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#ffffff"
    android:layout_margin="2dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:navigationIcon="@drawable/arrow_back_24"
        android:background="@color/bar"
        android:id="@+id/toolbar"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/Heading1"
        android:layout_marginStart="25dp"
        android:text="@string/Sign_In_TO_Your_Account"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <LinearLayout
        android:id="@+id/Layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/Login_Username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/LoginEmail"
            android:maxLength="16"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="TextFields" />
        <EditText
            android:id="@+id/Login_Password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:hint="@string/password"
            android:drawableEnd="@drawable/baseline_visibility_off_24"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLength="16"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_security_pin"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_security_pin"
            android:textSize="17sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/back"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/back"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:id="@+id/Login_Submit_btn"
            android:text="@string/Login_In_submit"
            android:textSize="20sp"
            android:elevation="0dp"
            app:cornerRadius="5dp"
            app:shapeAppearance="@null"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        tools:ignore="ExtraText">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Login_Text"
            android:layout_marginStart="65dp"
            android:text="@string/Login_Text"
            android:textSize="15sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/Login_Redirect_text"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/Login_Redirect_text"
            android:textColor="#2196F3"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>