<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#ffffff"
    android:layout_margin="2dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration_Student">


    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:navigationIcon="@drawable/arrow_back_24"
        android:background="@color/bar"
        android:id="@+id/toolbar"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/Heading1"
        android:layout_marginStart="25dp"
        android:text="@string/creating_accounts_is_fast_and_easy"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:id="@+id/Layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/Student_Fullname"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:textColor="#000000"
                android:textSize="16sp"
                android:background="@drawable/edit_text_background"

                />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:id="@+id/Student_Enrolment_no"
                android:textColor="#000000"
                android:background="@drawable/edit_text_background"
                android:textSize="16sp"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/Course"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/select_course"
            android:maxLength="16"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/signEmail"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="TextFields" />
        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:hint="@string/password"
            android:drawableEnd="@drawable/baseline_visibility_off_24"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLength="16"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />
        <EditText
            android:id="@+id/ConformPass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/conform_password"
            android:drawableEnd="@drawable/baseline_visibility_off_24"
            android:maxLength="16"
            android:padding="10dp"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="TextFields" />
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/back"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:id="@+id/Submit_btn"
            android:text="@string/Sign_In_submit"
            android:textSize="20sp"
            android:elevation="0dp"
            app:cornerRadius="5dp"
            app:shapeAppearance="@null"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

</LinearLayout>